[package]
name = "rflock"
version = "0.1.0"
authors = ["Shai Caspin <cashai99@gmail.com>"]
edition = "2018"
license = "MIT"
description = "A phase-fair reader-writer lock that reduces worst-case blocking for readers. Especially useful for multiprocessor real-time systems."
repository = "https://github.com/scaspin/rflock"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
bindgen = "0.54.1"
cc = "1.0"
